Patch 4: Create main RecyclerView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,24 +8,30 @@
     tools:context=".MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="#DD1414"
+        android:background="#D8C5C5"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        android:layout_gravity="right"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="100dp"
             android:text="Android With Kotlin"/>
         <ImageButton
             android:id="@+id/image_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="40dp"
+            android:src="@drawable/linear_layout_main"
+            android:layout_height="40dp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:padding="5dp"
+        android:layout_margin="5dp"
         android:id="@+id/recyclerView_main_id"
         android:layout_width="match_parent"
+        android:background="#F1EDED"
         android:layout_gravity="center"
         android:layout_height="wrap_content" />
 
