--- a/app/src/main/res/layout/recycler_view_items_main.xml
+++ b/app/src/main/res/layout/recycler_view_items_main.xml
@@ -10,19 +10,19 @@
         android:layout_width="match_parent"
         android:id="@+id/layout_Recyclerview_Main_Id"
         android:layout_height="match_parent"
-        android:background="#673AB7"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/imageView_MainRecycler_Id"
-            android:layout_width="wrap_content"
+            android:padding="10dp"
+            android:layout_width="100dp"
             android:layout_gravity="center"
-            android:layout_height="wrap_content"/>
+            android:layout_height="100dp"/>
         <TextView
             android:id="@+id/text_mainRecycler_id"
             android:layout_width="wrap_content"
-            android:padding="10dp"
+            android:paddingBottom="10dp"
             android:layout_gravity="center"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:layout_height="wrap_content"
             android:text="ThongDuong"/>
     </LinearLayout>
