--- a/app/src/main/res/layout/recycler_view_items_main.xml
+++ b/app/src/main/res/layout/recycler_view_items_main.xml
@@ -2,14 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="10dp"
-    android:padding="15dp"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/layout_Recyclerview_Main_Id"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:background="@drawable/main_recyclerview_item_decoration"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/imageView_MainRecycler_Id"
