Patch4: Create toolbar

--- a/app/src/main/res/drawable/main_recyclerview_item_decoration2.xml
+++ b/app/src/main/res/drawable/main_recyclerview_item_decoration2.xml
@@ -4,6 +4,7 @@
         <shape android:shape="rectangle" >
             <corners android:radius="10dp"/>
             <gradient
+                android:angle="180"
                 android:centerColor="#FFEB3B"
                 android:startColor="#0F9715"
                 android:gradientRadius="19dp"
@@ -24,5 +25,4 @@
             <corners android:radius="8dp"/>
         </shape>
     </item>
-
 </layer-list>
