--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="widgets_main_item_color">#4CAF50</color>
+    <color name="explicit_intent_main_item_color">#DAD12C</color>
 </resources>
