--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="#D8C5C5"
-        android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:layout_gravity="right"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="100dp"
-            android:text="Android With Kotlin"/>
-        <ImageButton
-            android:id="@+id/image_button"
-            android:layout_width="40dp"
-            android:src="@drawable/linear_layout_main"
-            android:layout_height="40dp" />
-    </LinearLayout>
 
+    <include layout="@layout/toolbar_layout" />
     <androidx.recyclerview.widget.RecyclerView
-        android:padding="5dp"
-        android:layout_margin="5dp"
         android:id="@+id/recyclerView_main_id"
         android:layout_width="match_parent"
+        android:padding="3dp"
         android:layout_height="wrap_content" />
-
 </LinearLayout>
